Fixed scrolling relative mouse coordinates bug, and added ability to toggle screen wrap for game.

--- a/html5jsimplement/style.css
+++ b/html5jsimplement/style.css
@@ -70,6 +70,13 @@ div.action:hover{
 	font-size: 14px;
 	position: relative;
 	left: 140px;
+	float:left;
+}
+#toggleWrap{
+	font-size: 14px;
+	position: relative;
+	float:left;
+	left: 273px;
 }
 .themeBox{
 	float: left;
